--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.3",
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.2.0",
     "@types/node": "^22.7.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-icons": "^0.19.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
