--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "sass": "^1.79.3",
     "typescript": "^5.5.3",
+    "unocss": "^0.62.4",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
